--- a/css/style.css
+++ b/css/style.css
@@ -35,3 +35,8 @@ footer {
     height: 100%;
     object-fit: cover; /* biar foto tidak distorsi dan nge-cover seluruh thumbnail */
 }
+
+.object-fit-cover {
+  object-fit: cover;
+}
+
